--- a/Terraform/.gitignore
+++ b/Terraform/.gitignore
@@ -32,3 +32,6 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+# Also exclude lock file since it should be created with terraform init
+.terraform.lock.hcl
